--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             </div>
             <div class="card column is-9">
                 <h4 class="card-header m-2">Save your favorites to the list!</h4>
-                <button id="saveDog" class="btn btn-dark m-2 p-2" type="button">
-                    Favorite
+                <p id= dogList class="p-3"></p>
+                <button id="saveDog" class="btn btn-dark m-2 column is-3" type="button">
+                    Insert Logo
                 </button>
             </div>
         </div>
