adding favorite star

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel='stylesheet' href="./assets/style.css">    
+    <link rel='stylesheet' href="./assets/style.css">
+    <link rel="import" href="path/to/favorite-star.html">    
     <title>Find a pet</title>
 </head>
 
@@ -31,7 +32,7 @@
                 <h4 class="card-header m-2">Save your favorites to the list!</h4>
                 <p id= dogList class="p-3"></p>
                 <button id="saveDog" class="btn btn-dark m-2 column is-3" type="button">
-                    Insert Logo
+                    Insert Logo <favorite-star><span>&#11088;</span></favorite-star>
                 </button>
             </div>
         </div>
