added img to header and changed background

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <header class="text-center bg-dark p-3 text-light">
-        <h1>Find a pet near you</h1>
+    <header class="text-center has-background-primary-dark p-3 text-light">
+        <h1><img src="https://img.icons8.com/windows/32/000000/dog-footprint.png" />  Find a dog near you   <img src="https://img.icons8.com/windows/32/000000/dog-footprint.png"/></h1>
     </header>
 
     <main class="flex-row justify-space-between">
@@ -31,8 +31,8 @@
             <div class="card column is-9">
                 <h4 class="card-header m-2">Save your favorites to the list!</h4>
                 <p id= dogList class="p-3"></p>
-                <button id="saveDog" class="btn btn-dark m-2 column is-3" type="button">
-                    Insert Logo <favorite-star><span>&#11088;</span></favorite-star>
+                <button id="saveDog" class="btn btn-dark m-2 column is-2" type="button">
+                    <favorite-star><span>&#11088;</span></favorite-star>
                 </button>
             </div>
         </div>
@@ -59,6 +59,7 @@
 
 
     </main>
+    <script src="./assets/script.js"></script>
 
 </body>
 
