--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </div>
             <div class="card column is-9">
                 <h4 class="card-header m-2">Save your favorites to the list!</h4>
-                <p id= dogList class="p-3"></p>
+                <p id= dogList class="p-3">
+                    hello
+                </p>
                 <button id="saveDog" class="btn btn-dark m-2 column is-3" type="button">
                     Insert Logo <favorite-star><span>&#11088;</span></favorite-star>
                 </button>
@@ -59,6 +61,9 @@
 
 
     </main>
+    <script src="./assets/script.js">
+
+    </script>  
 
 </body>
 
