api returns proper location and dogs only

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <div class="columns">
             <div class="card column is-3">
-                <h4 class="card-header m-2">Search by breed:</h4>
-                <input id="breedInput" type="text" placeholder=" Enter breed" class="m-2 border">
+                <h4 class="card-header m-2">Search by Zipcode:</h4>
+                <input id="zipInput" type="text" placeholder=" Enter zipcode" class="m-2 border">
                 <button id="search" class="btn btn-primary m-2" type="button">
                     Search
                 </button>
