random fact generator

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 </button>
             </div>
             <div class="card column is-9">
-                <h4 class="card-header m-2">Random fact about current dog</h4>
-                <p id="dogfact" class="p-2">This dog is super cool.</p>
+                <h4 class="card-header m-2">Learn something new about dogs.</h4>
+                <p id="dogfact" class="p-4"></p>
+                <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
+                    Random Fact Generator
+                </button>
             </div>
         </div>
 
