uploading image to random fact gen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href="./assets/style.css">
     <link rel="import" href="path/to/favorite-star.html">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Find a pet</title>
 </head>
 
@@ -50,8 +51,9 @@
                 </button>
             </div>
             <div class="card column is-9">
-                <h4 class="card-header m-2">Learn something new about dogs.</h4>
+                <h4 class="card-header m-2">Learn something new about dogs</h4>
                 <p id="dogfact" class="p-4"></p>
+                <img id="image">
                 <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
                     Random Fact Generator
                 </button>
