--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card column is-9">
                 <h4 class="card-header m-2">Learn something new about dogs</h4>
                 <p id="dogfact" class="p-4"></p>
-                <img id="image">
+                <img id="image" width="300px">
                 <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
                     Random Fact Generator
                 </button>
