added ID to what is returned

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <img id="dogPic">
                     <p id="dogGender"></p>
                     <p id="dogContact"></p>
+                    <p id="dogId"></p>
                 </div>
                 <button id="saveDog" class="btn btn-dark m-2 column is-2" type="button">
                     <favorite-star><span>&#11088;</span></favorite-star>
