--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="card column is-3">
                 <h4 class="card-header m-2">Saved list</h4>
                 <ul id="saved-list" class="p-2">
-
+                    <div id="pastSaves"></div>
                 </ul>
                 <button id="clear" class="btn btn-dark m-2 p-2" type="button">
                     Clear Searches
