--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <link rel='stylesheet' href="./assets/style.css">
     <link rel="import" href="path/to/favorite-star.html">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <img src="imgs/png-transparent-dog-paw-cat-paw-prints-angle-white-animals.png" class="background"> 
+    <img src="imgs/be54bd5e8e9c23e3ce570ff2acae592d.jpg" class="foreground">
+
         <title>Find a pet</title>
 </head>
 
 <body>
+    <div class="wrapper">
     <header class="text-center p-3 text-light">
         <h1><img src="https://img.icons8.com/windows/32/000000/dog-footprint.png" />  Find a dog near you   <img src="https://img.icons8.com/windows/32/000000/dog-footprint.png"/></h1>
     </header>
@@ -62,7 +66,7 @@
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
-
+</div>
 </body>
 
 </html>
