--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
         <div class="columns pt-5">
             <div class="card column is-3">
-                <h4 class="card-header m-2">Saved list</h4>
-                <ul id="saved-list" class="p-2">
+                <h4 class="card-header m-2">Saved Dogs List</h4>
+                <ul id="saved-list">
                     <div id="pastSaves"></div>
                 </ul>
                 <button id="clear" class="btn btn-dark m-2 p-2" type="button">
-                    Clear Searches
+                    Clear Saved List
                 </button>
             </div>
             <div class="card column is-9">
