--- a/index.html
+++ b/index.html
@@ -32,24 +32,27 @@
             </div>
             <div class="card .d-flex column is-9">
                 <h4 class="card-header m-2">Save your favorites to the list!</h4>
-                <div class="card column is-5">
-
-                    <div id="currentDog" class="p-3 card">
-                        <img id="dogPic" class="card-image-top">
+                <div class="card column is-12">
+                    <div id="currentDog" class="p-3">
+                        <img id="dogPic" class="card-image">
                         <div class="card-body">
-                        <h2 id="dogName" class="card-title"></h2>
-                        <p id="dogAge" class="card-text "></p>
-                        <p id="dogBreed"></p>
-                        <p id="dogGender"></p>
-                        <p id="dogContact"></p>
-                        <p id="dogId"></p>
+                            <div class="dog-info is-flex-direction-row">
+                                <h2 id="dogName" class="card-title"></h2>
+                                <p id="dogAge"></p>
+                                <p id="dogBreed"></p>
+                                <p id="dogGender"></p>
+                                <p id="dogContact"></p>
+                                <p id="dogId"></p>
+                                <button id="saveDog" class="btn btn-dark m-2" type="button">
+                                    <favorite-star><span>&#11088;</span></favorite-star>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <button id="saveDog" class="btn btn-dark m-2 column is-2" type="button">
-                    <favorite-star><span>&#11088;</span></favorite-star>
-                </button>
             </div>
+
+        </div>
         </div>
 
         <div class="columns .d-flex pt-5">
@@ -62,18 +65,22 @@
                     Clear Saved List
                 </button>
             </div>
+
             <div class="card .d-flex column is-9">
                 <h4 class="card-header m-2">As A Future Dog Owner Here Are Some Must Know Facts</h4>
-                <div class="card column is-4">
-                    <img class="card-img-top" id="image" width="300px">
-                    <p id="dogfact" class="p-4 card-text"></p>
-
+                <div class="card column is-12">
+                    <div id="currentDogFact" class="p-3">
+                        <img class="card-image" id="image" width="300px">
+                        <p id="dogfact"></p>
+                    </div>
+                    <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
+                        Random Fact Generator
+                    </button>
                 </div>
-                <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
-                    Random Fact Generator
-                </button>
             </div>
         </div>
+
+
 
 
 
