button style changes and header changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="card column is-3">
                 <h4 class="card-header m-2">Search by Zipcode:</h4>
                 <input id="zipInput" type="text" placeholder=" Enter zipcode" class="m-2 border">
-                <button id="search" class="btn btn-primary m-2" type="button">
+                <button id="search" class="btn btn-primary m-2 search" type="button">
                     Search
                 </button>
             </div>
@@ -43,7 +43,7 @@
                                 <p id="dogGender"></p>
                                 <p id="dogContact"></p>
                                 <p id="dogId"></p>
-                                <button id="saveDog" class="btn btn-dark m-2" type="button">
+                                <button id="saveDog" class="btn btn-dark m-2 fav" type="button">
                                     <favorite-star><span>&#11088;</span></favorite-star>
                                 </button>
                             </div>
@@ -61,7 +61,7 @@
                 <ul id="saved-list">
                     <div id="pastSaves"></div>
                 </ul>
-                <button id="clear" class="btn btn-dark m-2 p-2" type="button">
+                <button id="clear" class="btn btn-dark m-2 p-2 clear-btn" type="button">
                     Clear Saved List
                 </button>
             </div>
@@ -73,7 +73,7 @@
                         <img class="card-image" id="image" width="300px">
                         <p id="dogfact"></p>
                     </div>
-                    <button id="fact-btn" class="btn btn-dark m-2 column is-2" type="button">
+                    <button id="fact-btn" class="btn btn-dark m-2 column is-2 fact" type="button">
                         Random Fact Generator
                     </button>
                 </div>
